src/styles/Header.module.scss
// @import "/src/styles/globals.scss";

.header {
  $padding: 0.2rem;
  $height: 4rem;
  font-size: $height;

  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  width: calc(100% - 2 * $padding);
  height: $height;
  padding: $padding;

  @media screen and (min-width: 768px) {
    height: 6rem;
    font-size: 6rem;
  }

  h1 {
    font-family: "Trail", sans-serif;
    font-size: 1em;
    font-weight: 400;

    transition-property: font-variation-settings;
    transition-timing-function: ease;

    // @supports (font-variation-settings: normal) {
    //   font-variation-settings: "Stretch" 500;
    // }
  }

  div {
    height: calc(100% - 2 * $padding);
    background-color: black;

    @supports (aspect-ratio: 1) {
      aspect-ratio: 1;
    }

    // Maintain aspect ratio using padding, set by height.
    // @supports not (aspect-ratio: 1) {
    //   padding-left: $icon-size;
    // }
  }
}

